--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,10 @@ authors = [
     { name = "Steven", email = "21993423+StevenJUlbrich@users.noreply.github.com" }
 ]
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "jaydebeapi>=1.2.3",
+    "jpype1>=1.5.0",
+]
 
 [build-system]
 requires = ["uv_build>=0.8.8,<0.9.0"]
